- 1.0.1 update - fixed composer version - fixed snippet namespace naming convention

--- a/src/Resources/views/page/product-detail/buy-widget.html.twig
+++ b/src/Resources/views/page/product-detail/buy-widget.html.twig
@@ -11,7 +11,7 @@
             <div class="product-detail-ordernumber-container">
 
                 <span class="product-detail-ordernumber-label">
-                    {{ "mill-product-ean.detail.eanLabel"|trans }}
+                    {{ "millProductEan.detail.eanLabel"|trans }}
                 </span>
 
                 <span class="product-detail-ordernumber" itemprop="{{ page.millProductEan.itemProp }}">
